--- a/reset.css
+++ b/reset.css
@@ -3,7 +3,7 @@
 	width: 30px;
 	height: 30px;
 	border-radius: 15px;
-	background-color: #cd5151;
+	background-color: #d467bd;
 	background-image: url('equipe_two.png');
 	color: #3e040f;
 	text-align: center;
