--- a/style.css
+++ b/style.css
@@ -14,35 +14,13 @@ section{
 .ball{
     max-width: 30px;
 	margin: 10, auto;
-	animation: 3s linear 1s infinite alternate slidein;
+	-webkit-animation: 5s linear 0s infinite alternate slidein;
+	animation: 5s linear 0s infinite alternate slidein;
 	position: absolute;
-
 }
 
-@keyframes slidein{
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
-}
-
-@media screen and (max-width:600px) {
-	header {
-		position: center;
-	}
-
-	.pitch {
-	  position: center;
-	}
-
-	main {
-		transform: rotate(90deg);
-		margin: auto;
-		position: center;
-	}
-}
+@-webkit-keyframes slidein { from { margin-left:-20%; } to { margin-left:100%; }  }
+@keyframes slidein { from { margin-left:-20%; } to { margin-left:100%; }  }
 
 title {
     flex-wrap: wrap;
@@ -53,11 +31,35 @@ title {
 header {
 	width: 100%;
 	color: #eee;
-	border-bottom: 1px solid #eee;
-	border-radius: 10em;
 	font-size: 32px;
 	padding: 20px 70px;
 	position: center;
+}
+
+button{
+    appearance: auto;
+    writing-mode: horizontal-tb;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    text-rendering: auto;
+    color: -internal-light-dark(black, white);
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor:pointer;
+    box-sizing: border-box;
+    background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
+    margin: 0em;
+    padding: 1px 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+    border-image: initial;
 }
 
 nav {
