--- a/style.css
+++ b/style.css
@@ -12,15 +12,24 @@ section{
 }
 
 .ball{
-    max-width: 30px;
-	margin: 10, auto;
-	-webkit-animation: 5s linear 0s infinite alternate slidein;
-	animation: 5s linear 0s infinite alternate slidein;
+	max-width: 30px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+	-webkit-animation: 6s linear 0s infinite alternate slidein;
+	animation: 6s linear 0s infinite alternate slidein;
 	position: absolute;
 }
 
-@-webkit-keyframes slidein { from { margin-left:-20%; } to { margin-left:100%; }  }
-@keyframes slidein { from { margin-left:-20%; } to { margin-left:100%; }  }
+@-webkit-keyframes slidein { 
+	from { margin-left:0%; } 
+	to { margin-left:25%; }  
+}
+
+@keyframes slidein { 
+	from { margin-left:0%; } 
+	to { margin-left:25%; }  
+}
 
 title {
     flex-wrap: wrap;
@@ -36,31 +45,13 @@ header {
 	position: center;
 }
 
-button{
-    appearance: auto;
-    writing-mode: horizontal-tb;
+button {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-    text-rendering: auto;
-    color: -internal-light-dark(black, white);
-    letter-spacing: normal;
-    word-spacing: normal;
-    line-height: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: center;
-    align-items: flex-start;
-    cursor:pointer;
-    box-sizing: border-box;
-    background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
-    margin: 0em;
-    padding: 1px 6px;
-    border-width: 2px;
-    border-style: outset;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    border-image: initial;
 }
+
+button:hover {
+	background-color: rgb(189, 190, 189);
+  }
 
 nav {
     flex-wrap: wrap;
